<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>AddShelf</class>
 <widget class="QDialog" name="AddShelf">
  <property name="windowModality">
   <enum>Qt::NonModal</enum>
  </property>
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>410</width>
    <height>250</height>
   </rect>
  </property>
  <property name="minimumSize">
   <size>
    <width>410</width>
    <height>250</height>
   </size>
  </property>
  <property name="maximumSize">
   <size>
    <width>410</width>
    <height>250</height>
   </size>
  </property>
  <property name="windowTitle">
   <string>Add Shelf</string>
  </property>
  <property name="windowIcon">
   <iconset resource="../resources/res.qrc">
    <normaloff>:/toolbar/shelf-icon.png</normaloff>:/toolbar/shelf-icon.png</iconset>
  </property>
  <widget class="QWidget" name="verticalLayoutWidget_6">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>391</width>
     <height>165</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="VL100">
    <item>
     <layout class="QHBoxLayout" name="HL110">
      <item>
       <layout class="QVBoxLayout" name="VL112">
        <item>
         <widget class="QLabel" name="LblFolderID">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>20</height>
           </size>
          </property>
          <property name="font">
           <font>
            <pointsize>9</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>&amp;Shelf ID</string>
          </property>
          <property name="buddy">
           <cstring>lineEdit0shelf_id</cstring>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="LblTitle">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>&amp;Title</string>
          </property>
          <property name="buddy">
           <cstring>textEdit0shelf_title</cstring>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="HL111">
        <item>
         <layout class="QVBoxLayout" name="VL1111">
          <item>
           <widget class="QLineEdit" name="lineEdit0shelf_id">
            <property name="minimumSize">
             <size>
              <width>0</width>
              <height>24</height>
             </size>
            </property>
            <property name="font">
             <font>
              <pointsize>9</pointsize>
             </font>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QTextEdit" name="textEdit0shelf_title">
            <property name="font">
             <font>
              <pointsize>9</pointsize>
             </font>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </item>
     </layout>
    </item>
    <item>
     <layout class="QVBoxLayout" name="VL120_2">
      <item>
       <layout class="QHBoxLayout" name="HL122_2">
        <item>
         <widget class="QLabel" name="LblStartDate_2">
          <property name="font">
           <font>
            <pointsize>9</pointsize>
            <weight>75</weight>
            <bold>true</bold>
           </font>
          </property>
          <property name="text">
           <string>&amp;Location ID</string>
          </property>
          <property name="buddy">
           <cstring>lineEdit0shelf_loc_id</cstring>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="HL121_2">
        <item>
         <widget class="QLineEdit" name="lineEdit0shelf_loc_id">
          <property name="minimumSize">
           <size>
            <width>0</width>
            <height>24</height>
           </size>
          </property>
          <property name="font">
           <font>
            <pointsize>9</pointsize>
           </font>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="horizontalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>135</x>
     <y>216</y>
     <width>266</width>
     <height>22</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="HL101">
    <item>
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
        <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
     <widget class="QGroupBox" name="GB2">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>93</width>
        <height>0</height>
       </size>
      </property>
      <property name="title">
       <string/>
      </property>
      <widget class="QLabel" name="LblTotalRecords">
       <property name="geometry">
        <rect>
         <x>4</x>
         <y>0</y>
         <width>91</width>
         <height>20</height>
        </rect>
       </property>
       <property name="sizePolicy">
        <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
       </property>
       <property name="minimumSize">
        <size>
         <width>65</width>
         <height>0</height>
        </size>
       </property>
       <property name="text">
        <string>0 record(s)</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QGroupBox" name="GB1">
   <property name="geometry">
    <rect>
     <x>6</x>
     <y>176</y>
     <width>126</width>
     <height>68</height>
    </rect>
   </property>
   <property name="maximumSize">
    <size>
     <width>16777215</width>
     <height>68</height>
    </size>
   </property>
   <property name="title">
    <string>Records Navigation</string>
   </property>
   <widget class="QLabel" name="LblRecNo">
    <property name="geometry">
     <rect>
      <x>10</x>
      <y>40</y>
      <width>65</width>
      <height>20</height>
     </rect>
    </property>
    <property name="sizePolicy">
     <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
    <property name="minimumSize">
     <size>
      <width>65</width>
      <height>0</height>
     </size>
    </property>
    <property name="text">
     <string>Rec #</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
    </property>
    <property name="buddy">
     <cstring>lineEditRecordNo</cstring>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEditRecordNo">
    <property name="geometry">
     <rect>
      <x>80</x>
      <y>40</y>
      <width>40</width>
      <height>20</height>
     </rect>
    </property>
    <property name="minimumSize">
     <size>
      <width>40</width>
      <height>0</height>
     </size>
    </property>
    <property name="maximumSize">
     <size>
      <width>40</width>
      <height>16777215</height>
     </size>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonLast">
    <property name="geometry">
     <rect>
      <x>95</x>
      <y>15</y>
      <width>26</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset resource="../resources/res.qrc">
      <normaloff>:/navigate/control-stop-right-icon.png</normaloff>:/navigate/control-stop-right-icon.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>32</width>
      <height>32</height>
     </size>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonNext">
    <property name="geometry">
     <rect>
      <x>65</x>
      <y>15</y>
      <width>26</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset resource="../resources/res.qrc">
      <normaloff>:/navigate/control-double-right-icon.png</normaloff>:/navigate/control-double-right-icon.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>32</width>
      <height>32</height>
     </size>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonPrev">
    <property name="geometry">
     <rect>
      <x>35</x>
      <y>15</y>
      <width>26</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset resource="../resources/res.qrc">
      <normaloff>:/navigate/control-double-left-icon.png</normaloff>:/navigate/control-double-left-icon.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>32</width>
      <height>32</height>
     </size>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButtonFirst">
    <property name="geometry">
     <rect>
      <x>5</x>
      <y>15</y>
      <width>26</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="icon">
     <iconset resource="../resources/res.qrc">
      <normaloff>:/navigate/control-stop-left-icon.png</normaloff>:/navigate/control-stop-left-icon.png</iconset>
    </property>
    <property name="iconSize">
     <size>
      <width>32</width>
      <height>32</height>
     </size>
    </property>
   </widget>
  </widget>
  <widget class="QWidget" name="horizontalLayoutWidget_2">
   <property name="geometry">
    <rect>
     <x>136</x>
     <y>191</y>
     <width>266</width>
     <height>25</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <spacer name="horizontalSpacer_2">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="sizeHint" stdset="0">
       <size>
        <width>40</width>
        <height>20</height>
       </size>
      </property>
     </spacer>
    </item>
    <item>
     <widget class="QPushButton" name="pushButtonAddMore">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>95</width>
        <height>0</height>
       </size>
      </property>
      <property name="text">
       <string>&amp;Save &amp;&amp; Add More</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QPushButton" name="pushButtonCommitAll">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
      <property name="minimumSize">
       <size>
        <width>95</width>
        <height>0</height>
       </size>
      </property>
      <property name="text">
       <string>&amp;Commit All</string>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
 </widget>
 <tabstops>
  <tabstop>lineEdit0shelf_id</tabstop>
  <tabstop>textEdit0shelf_title</tabstop>
  <tabstop>lineEdit0shelf_loc_id</tabstop>
  <tabstop>pushButtonAddMore</tabstop>
  <tabstop>pushButtonCommitAll</tabstop>
  <tabstop>lineEditRecordNo</tabstop>
  <tabstop>pushButtonFirst</tabstop>
  <tabstop>pushButtonPrev</tabstop>
  <tabstop>pushButtonNext</tabstop>
  <tabstop>pushButtonLast</tabstop>
 </tabstops>
 <resources>
  <include location="../resources/res.qrc"/>
 </resources>
 <connections/>
</ui>
